# Poppy-Logic-Controller

./: .gitignore  LICENSE-SOFTWARE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
Docs/: PoppyIO_bom_D.html  PoppyIO_ibom_D.html
Firmware-IEC/: .gitignore  Cargo.toml  README.md  build.rs  modbus_monitor.py
Firmware-IEC/src/: blink.st  main.rs  main.st
Firmware-IEC/src-rust/: main.rs
Firmware-IEC/src-rust/matiec/: ext.rs  mod.rs
Firmware-MicroPython/: README.md  poppy.py
Firmware-Rust/: Cargo.toml  README.md
Firmware-Rust/.cargo/: config.toml
Firmware-Rust/src/: main.rs
Hardware/: .gitignore
Hardware/Libraries/: PoppyLogicController.kicad_sym
Hardware/Libraries/3D/: .gitignore
Hardware/Libraries/MCU_RaspberryPi_and_Boards.pretty/: RPi_Pico_SMD_TH.kicad_mod
Hardware/Libraries/PoppyLogicController.pretty/: SYM_Rahix.kicad_mod  TO-220-3_Vertical_Clearance.kicad_mod  WAGO_233-204.kicad_mod
Hardware/PoppyIO/: CHANGELOG.md  NOTES.md  PoppyIO.kicad_pcb  PoppyIO.kicad_pro  PoppyIO.kicad_sch  bom.ini  fp-lib-table  ibom.config.ini  inputs.kicad_sch  outputs.kicad_sch  picomcu.kicad_sch  sym-lib-table
