[package]
name = "poppy-logic-firmware-iec"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "poppy-logic-firmware-iec"
path = "src-rust/main.rs"
test = false
bench = false

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
cty = "0.2.2"
embedded-hal = { version = "0.2.6", features=["unproven"] }
embedded-time = "0.12.0"
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
paste = "1.0.12"
port-expander = "0.3.0"
rp-pico = "0.2.0"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
shared-bus = "0.2.5"
usb-device = "0.2.9"
usbd-serial = "0.1.1"
heapless = "0.7.16"
rmodbus = { version = "0.6.4", features = ["heapless"], default-features = false }

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[build-dependencies]
cc = "1.0.79"
